<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Top_Up_Preview"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:textStyle="bold"
        android:textSize="@dimen/text_30"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:fontFamily="@font/aladin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_mxlarge" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_middle"
        android:visibility="visible"
        app:cardCornerRadius="20dp"
        app:cardElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/spacing_middle">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aladin"
                    android:text="@string/from"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/network_size"
                    android:fontFamily="@font/aladin"
                    android:text="@string/to"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_20" />

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/topUp_user_acct_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aladin"
                    android:text="@string/acct"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_20" />

                <TextView
                    android:id="@+id/topUp_receiver_ph_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/aladin"
                    android:text="@string/normal_phone"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_20" />

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/topUp_user_acct_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aladin"
                    android:text="@string/acct_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_20" />

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <TextView
                android:id="@+id/topUp_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/bal"
                android:textColor="@color/black"
                android:fontFamily="@font/aladin"
                android:textSize="@dimen/text_25"/>
            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/topUp_password"
                    android:layout_width="@dimen/pass_space"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/topUp_done"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_rounded_primary"
                    android:text="@string/done"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>