<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Manage_Profile"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/man"
        android:textStyle="bold"
        android:textSize="@dimen/text_30"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:fontFamily="@font/aladin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_mxlarge" />

    <Button
        android:id="@+id/manage_profile_add"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:background="@drawable/btn_rounded_primary"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/spacing_middle"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_middle"
        android:visibility="visible"
        app:cardCornerRadius="20dp"
        app:cardElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/spacing_middle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/something"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>