<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Profile">

    <View
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_mlarge">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accont"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="@dimen/text_25"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_middle"
                android:visibility="visible"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/spacing_mlarge">

                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />

<!--                            <Spinner-->
<!--                                android:id="@+id/add_profiler_bank_spinner"-->
<!--                                android:layout_width="match_parent"-->
<!--                                android:layout_height="@dimen/spacing_xxlarge"-->
<!--                                android:background="@color/grey_100"/>-->

                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/acct">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/add_profile_acct_no"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_edittext"
                                android:inputType="number"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:minHeight="48dp"
                                android:singleLine="true"
                                android:textColor="@color/black" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <TextView
                                android:id="@+id/add_profile_acct_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="end"
                                android:text="@string/acct_name"
                                android:textColor="@color/black" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/acct_ph_no">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/add_profile_ph_no"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_edittext"
                                android:inputType="phone"
                                android:maxLength="11"
                                android:maxLines="1"
                                android:minHeight="48dp"
                                android:singleLine="true"
                                android:textColor="@color/black"/>

                            </com.google.android.material.textfield.TextInputLayout>

                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/nick">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/add_profile_nickname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_edittext"
                                android:inputType="text"
                                android:maxLength="50"
                                android:maxLines="1"
                                android:minHeight="48dp"
                                android:singleLine="true"
                                android:textColor="@color/black"/>

                            </com.google.android.material.textfield.TextInputLayout>

                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/pin"
                                app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/add_profile_pin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_edittext"
                                android:inputType="numberPassword"
                                android:maxLength="4"
                                android:maxLines="1"
                                android:minHeight="48dp"
                                android:singleLine="true"
                                android:textColor="@color/black"/>

                            </com.google.android.material.textfield.TextInputLayout>

                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />

                            <Button
                                android:id="@+id/add_profile_done"
                                android:layout_width="wrap_content"
                                android:layout_height="55dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="-4dp"
                                android:layout_marginRight="-4dp"
                                android:background="@drawable/btn_rounded_primary"
                                android:text="@string/done"
                                android:textAllCaps="false"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </ScrollView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>